--- a/products.html
+++ b/products.html
@@ -26,37 +26,37 @@
         <h1>Menu of Products</h1>
         <div class="products-container">
             <div class="box">
-                <img src="/assets/y1.png" class="btnImage" onclick="show()">
+                <img src="/assets/y1.png" class="btnImage" onclick="showDesc('description1')">
                 <button>Buy!!!</button>
-                <div id="description">
-                    <i class="fa-solid fa-xmark"></i>
+                <div class="desc" id="description1">
+                    <i class="fa-solid fa-xmark" onclick="closeDesc('description1')"></i>
                     <h1>YES with Java Rice</h1>
                     <h3>Php 95.00</h3>
                 </div>
             </div>
             <div class="box">
-                <img src="/assets/y2.png" class="btnImage" onclick="show()">
+                <img src="/assets/y2.png" class="btnImage" onclick="showDesc('description2')">
                 <button>Buy!!!</button>
-                <div id="description">
-                    <i class="fa-solid fa-xmark"></i>
+                <div class="desc" id="description2">
+                    <i class="fa-solid fa-xmark" onclick="closeDesc('description2')"></i>
                     <h1>YES na Yes with Java Rice</h1>
                     <h3>Php 139.00</h3>
                 </div>
             </div>
             <div class="box">
-                <img src="/assets/y3.png" class="btnImage" onclick="show()">
+                <img src="/assets/y3.png" class="btnImage" onclick="showDesc('description3')">
                 <button>Buy!!!</button>
-                <div id="description">
-                    <i class="fa-solid fa-xmark"></i>
+                <div class="desc" id="description3">
+                    <i class="fa-solid fa-xmark" onclick="closeDesc('description3')"></i>
                     <h1>YES + Hotdog with Java Rice</h1>
                     <h3>Php 129.00</h3>
                 </div>
             </div>
             <div class="box">
-                <img src="/assets/y4.png" class="btnImage" onclick="show()">
+                <img src="/assets/y4.png" class="btnImage" onclick="showDesc('description4')">
                 <button>Buy!!!</button>
-                <div id="description">
-                    <i class="fa-solid fa-xmark"></i>
+                <div class="desc" id="description4">
+                    <i class="fa-solid fa-xmark" onclick="closeDesc('description4')"></i>
                     <h1>YES + Tenga with Java Rice</h1>
                     <h3>Php 129.00</h3>
                 </div>
@@ -64,37 +64,37 @@
         </div>
         <div class="products-container">
             <div class="box">
-                <img src="/assets/y5.png" class="btnImage" onclick="show()">
+                <img src="/assets/y5.png" class="btnImage" onclick="showDesc('description5')">
                 <button>Buy!!!</button>
-                <div id="description">
-                    <i class="fa-solid fa-xmark"></i>
+                <div class="desc" id="description5">
+                    <i class="fa-solid fa-xmark" onclick="closeDesc('description5')"></i>
                     <h1>YES + Isaw Baboy with Java Rice</h1>
                     <h3>Php 129.00</h3>
                 </div>
             </div>
             <div class="box">
-                <img src="/assets/y6.png" class="btnImage" onclick="show()">
+                <img src="/assets/y6.png" class="btnImage" onclick="showDesc('description6')">
                 <button>Buy!!!</button>
-                <div id="description">
-                    <i class="fa-solid fa-xmark"></i>
+                <div class="desc" id="description6">
+                    <i class="fa-solid fa-xmark" onclick="closeDesc('description6')"></i>
                     <h1>YES + Isaw Manok with Java Rice</h1>
                     <h3>Php 129.00</h3>
                 </div>
             </div>
             <div class="box">
-                <img src="/assets/y7.png" class="btnImage" onclick="show()">
+                <img src="/assets/y7.png" class="btnImage" onclick="showDesc('description7')">
                 <button>Buy!!!</button>
-                <div id="description">
-                    <i class="fa-solid fa-xmark"></i>
+                <div class="desc" id="description7">
+                    <i class="fa-solid fa-xmark" onclick="closeDesc('description7')"></i>
                     <h1>YES with Friends</h1>
                     <h3>Php 235.00</h3>
                 </div>
             </div>
             <div class="box">
-                <img src="/assets/y8.png" class="btnImage" onclick="show()">
+                <img src="/assets/y8.png" class="btnImage" onclick="showDesc('description8')">
                 <button>Buy!!!</button>
-                <div id="description">
-                    <i class="fa-solid fa-xmark"></i>
+                <div class="desc" id="description8">
+                    <i class="fa-solid fa-xmark" onclick="closeDesc('description8')"></i>
                     <h1>Inihaw na Liempo with Java Rice</h1>
                     <h3>Php 229.00</h3>
                 </div>
@@ -102,37 +102,37 @@
         </div>
         <div class="products-container">
             <div class="box">
-                <img src="/assets/y9.png" class="btnImage" onclick="show()">
+                <img src="/assets/y9.png" class="btnImage" onclick="showDesc('description9')">
                 <button>Buy!!!</button>
-                <div id="description">
-                    <i class="fa-solid fa-xmark"></i>
+                <div class="desc" id="description9">
+                    <i class="fa-solid fa-xmark" onclick="closeDesc('description9')"></i>
                     <h1>Chicken BBQ</h1>
                     <h3>Php 175.00</h3>
                 </div>
             </div>
             <div class="box">
-                <img src="/assets/y10.png" class="btnImage" onclick="show()">
+                <img src="/assets/y10.png" class="btnImage" onclick="showDesc('description10')">
                 <button>Buy!!!</button>
-                <div id="description">
-                    <i class="fa-solid fa-xmark"></i>
-                    <h1>Inihaw na Porkchop with Java Rice</h1>
+                <div class="desc" id="description10">
+                    <i class="fa-solid fa-xmark" onclick="closeDesc('description10')"></i>
+                    <h1>Porkchop with Java Rice</h1>
                     <h3>Php 125.00</h3>
                 </div>
             </div>
             <div class="box">
-                <img src="/assets/y11.png" class="btnImage" onclick="show()">
+                <img src="/assets/y11.png" class="btnImage" onclick="showDesc('description11')">
                 <button>Buy!!!</button>
-                <div id="description">
-                    <i class="fa-solid fa-xmark"></i>
+                <div class="desc" id="description11">
+                    <i class="fa-solid fa-xmark" onclick="closeDesc('description11')"></i>
                     <h1>YES + Isaw Bilog with Java Rice</h1>
                     <h3>Php 135.00</h3>
                 </div>
             </div>
             <div class="box">
-                <img src="/assets/y12.png" class="btnImage" onclick="show()">
+                <img src="/assets/y12.png" class="btnImage" onclick="showDesc('description12')">
                 <button>Buy!!!</button>
-                <div id="description">
-                    <i class="fa-solid fa-xmark"></i>
+                <div class="desc" id="description12">
+                    <i class="fa-solid fa-xmark" onclick="closeDesc('description12')"></i>
                     <h1>YES + Bulaklak with Java Rice</h1>
                     <h3>Php 129.00</h3>
                 </div>
