--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <li><a href="index.html">Contact</a></li>
         </ul>
     </header>
-    <section class="home"></section>
+    <section class="home">
+        <h1>Dito kay Efren, Ikaw talaga ay mapapa Yes, kaya tara na!!!</h1>
+    </section>
     <footer>
         <div class="footer-content">
             <div class="location-icons">
