--- a/products.html
+++ b/products.html
@@ -142,13 +142,13 @@
     <footer>
         <div class="footer-content">
             <div class="location-icons">
-                <a href=""><i class="fa-solid fa-location-dot"><span> 311 105 St. Soldier's Village Sta.Lucia, Pasig City</span></i></a>
+                <a href=""><i class="fa-solid fa-location-dot"><span>Pasig City</span></i></a>
                 <a href=""><i class="fa-solid fa-phone"><span> 09917951577</span></i></a>
             </div>
             <div class="social-icons">
-                <a href="https://web.facebook.com/"><i class="fa-brands fa-facebook"><span> Jhondel Jumuad Mellomida</span></i></a>
-                <a href="https://www.x.com"><i class="fa-brands fa-x-twitter"><span> OkayNoice69420</span></i></a>
-                <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"><span> jhndlmllmd</span></i></a>
+                <a href="https://web.facebook.com/"><i class="fa-brands fa-facebook"><span> Efren</span></i></a>
+                <a href="https://www.x.com"><i class="fa-brands fa-x-twitter"><span> Efren</span></i></a>
+                <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"><span> Efren</span></i></a>
             </div>
         </div>
     </footer>
